# Functional-Progamming

./: .gitignore  FP_13_10.rkt~  FP_28_11_2016.rkt  README.md  file  file.pub  hw2.zad1.81333.rkt  hw2.zad2.81333.rkt  variadic_func.rkt  zad1  zad1.rkt~  zad_kontr.rkt  zad_kontr_upr.rkt
Elixir/: first_problems.exs  first_steps.exs
Haskell/: FP_01_12_2016.hs  FP_15_12_2016.hs  Learnyoutests.hs  haskell_dabbling.hs  rado_week1_pbs.hs
Haskell/99-Haskell-Problems/: 1to10.hs
Haskell/FP_HW3/: hw3.81333.task1.hs
Haskell/FP_RADO_UPR/: rado_week2_pbs.hs
Haskell/FP_UPR/: FP_22_12_2016.hs
Haskell/Haskell_Programming_Book/: chapter2ex.hs
Haskell/LYAH/: LearnYouHigherOrder.hs  LearnYouModules.hs  README.md
Haskell/Project-HuffmanCoding/HuffmanCoding/: HuffmanCoding.cabal
Haskell/Project-HuffmanCoding/HuffmanCoding/src/: HetList.hs  HuffmanTree.hs  Lib.hs  input.txt
Haskell/Project-HuffmanCoding/HuffmanCoding/test/: Spec.hs
Haskell/Project-Sudoku/: Sudoku.hs  SudokuChecker.hs  test.hs
Haskell/Uni/: exam2prep.hs
Racket/fp2016_hw2/: hw2.zad1.81333.rkt  hw2.zad2.81333.rkt  hw2.zad3.81333.rkt  hw2.zad4.81333.rkt
Racket/fp_ex/: FP_13_10.rkt  zad_kontr_2014.rkt
Racket/hw1/: hw1.81333.task2.rkt  (+1 more)
dabblings/: lecture_4_dabbling.rkt
fp2016_hw2/: hw2.zad2.81333.rkt  hw2.zad3.81333.rkt  hw2.zad4.81333.rkt  hw2.zad5.81333.rkt
fp_ex/: FP_03_11.rkt  FP_17_11_16_KN.rkt  FP_20_10.rkt
fp_other_ex/: Rado_week6.rkt
fp_other_upr/: Rado_week4.rkt  Rado_week4.rkt~  Rado_week6.rkt~
fp_upr/: FP_03_10.rkt  FP_03_11.rkt~  FP_27_10.rkt  FP_27_10.rkt~
hw1/: hw1.81333.task1.rkt  hw1.81333.task3.rkt
(+48 files in other folders)
