name:                HuffmanCoding
version:             0.1.0.0
synopsis:            Huffman coding
description:         Implementing the huffman coding algorithm
homepage:            https://github.com/githubuser/HuffmanCoding#readme
license:             BSD3
license-file:        LICENSE
author:              Georgi Bojinov
maintainer:          georgi.bojinov@hotmail.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, HetList, HuffmanTree
  -- other-modules:       
  build-depends:       base >= 4.7 && < 5,
                       hspec >= 2.4.4				
  default-language:    Haskell2010

executable HuffmanCoding
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , HuffmanCoding
  default-language:    Haskell2010

test-suite HuffmanCoding-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HuffmanCoding
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/HuffmanCoding
